# stay_informed

./: .env.template  .gitignore  Dockerfile  README.md  airflow_newsfeed_to_local.py  dbt-cleaning-compose.yaml  docker-compose.yaml  news_to_gcs.py  old_schema.yaml  prod-docker-compose.yaml  pyproject.toml  rawdata.txt  requirements.txt  run_dbt_cleaning.py
dags/: dataset_creation.py  gcs_csv_to_bigquery_task_flow.py  gcs_xml_to_gcs_csv.py  llm_summary.py  news_to_gcs.py  run_dbt_cleaning_gpt.py  transform_raw_to_silver.py
dbt_project/: dbt_project.yml  profiles.yaml
dbt_project/models/cleaning/: rm_duplications.sql
dbt_project/models/gold/: gold.sql
dbt_project/models/silver/: schema.yaml  schema.yml  silver.sql
dbt_stay_informed_230724/: dbt_project.yml
dbt_stay_informed_230724/models/cleaning/: remove_duplicates.sql
dockerfiles/: Dockerfile_streamlit
google_function/: pyproject.toml  requirements.txt  save_raw_feed.py
scripts/: init_airflow.sh
streamlit/: Presentation.py  requirements.txt  streamlit_bigquery_app.py
streamlit/pages/: 1_Summary.py  1_presentation.py  2_Daily trends.py  2_daily trends.py
